# projectKetchup

./: .gitignore  CMakeLists.txt  README.md  _masterBuild-macosx.sh  _masterBuild-win32.cmd  cleanup-project-macosx.sh  cleanup-project-win32-vs2010.cmd  copy-exports-macosx.sh  copy-exports-win32.cmd  generate-project-macosx.sh  generate-project-win32-vs2008.cmd  generate-project-win32-vs2010.cmd  requirements.txt
cmake/: CMakeASM-NASMInformation.cmake
doc/: Desktop_Application_CheckList.txt
export/all/all/i18n/: projectKetchup_en_US.pot
export/all/all/include/: IPKFDataSinkFilter.h  IPKFFilterFactory.h  IPKFMediaTypeDescriptor.h  IPKFSampleRequest.h  PKAboutDialog.h  PKAboutDialog_XML.h  PKAlertDialog.h  PKBase64.h  PKBitmapLabel.h  PKBitmapOps.h  PKBitmapOpsX86.h  PKBlitter.h  PKBrowserTool.h  PKByteReader.h  PKChord.h  PKChordDiagramUI.h  PKChordLibraryDialog.h  PKChordLibraryDialog_XML.h  PKControl.h  PKCpu.h  PKCrc.h  PKCritSec.h  PKCursorTools.h  PKCustomContainer.h  PKDatabase.h  PKDoubleBufferedControl.h  PKDownload.h  PKFCustomSampleRequest.h  PKFDataBuffer.h  PKFDataMediaTypeDescriptor.h  PKFFileSourceFilter.h  PKFFilterProperties.h  PKFFiltersFactory.h  PKFImage.h  PKFImageChannel.h  PKFImageChannelBuffer8Bit.h  PKFImageChannelBufferFactory.h  PKFImageChannelBufferFloat.h  PKFImageSampleRequest.h  PKFInputConnector.h  (+63 more)
export/win32-vs2008/debug/lib/: core.lib  dialogs.lib  filters.lib  libjpeg.lib  libpng.lib  music.lib  musicUI.lib  sqlite.lib  vector.lib  zlib.lib
export/win32-vs2008/release/lib/: core.lib  dialogs.lib  filterGraph.lib  filters.lib  libjpeg.lib  libpng.lib  music.lib  musicUI.lib  sqlite.lib  tools.lib  vector.lib  zlib.lib
i18n/: README.txt  i18nFolderList.txt
scripts/: generate-build-common.cmd  update-version.bat
src/: CMakeLists.txt  PKVersion.h
src/core/: CMakeLists.txt  IPKObjectFactory.h  PKObject.cpp  PKObject.h  PKObjectLoader.cpp  PKObjectLoader.h  PKProperty.cpp  PKProperty.h  PKPropertyBag.cpp  PKTypes.cpp  PKVariant.cpp  PKVariant.h  PKi18n.cpp
src/dialogs/: CMakeLists.txt  PKAboutDialog.cpp  PKNumberInputDialog.cpp  PKNumberInputDialog.h  PKStdDialog.cpp  PKStdDialogXML.h  PKTextInputDialog.cpp  PKTextInputDialogXML.h
src/filterGraph/: CMakeLists.txt  IPKFConnector.cpp  IPKFConnector.h  IPKFDataSinkFilter.cpp  IPKFFilter.cpp  IPKFFilter.h  IPKFFilterFactory.cpp  IPKFImageChannelBuffer.cpp  IPKFImageChannelBuffer.h  IPKFImageTransformFilter.cpp  IPKFImageTransformFilter.h  IPKFMediaTypeDescriptor.cpp  IPKFSample.cpp  IPKFSample.h  IPKFSampleRequest.cpp  PKFCustomMediaTypeDescriptor.cpp  PKFCustomMediaTypeDescriptor.h  PKFCustomSample.cpp  PKFCustomSample.h  PKFCustomSampleRequest.cpp  PKFDataBuffer.cpp  PKFDataMediaTypeDescriptor.cpp  PKFDataSample.cpp  PKFDataSample.h  PKFDataSampleRequest.cpp  PKFDataSampleRequest.h  PKFFilterGraph.cpp  PKFFilterGraph.h  PKFFilterProperties.cpp  PKFImage.cpp  PKFImageChannel.cpp  PKFImageChannelBuffer16Bit.cpp  PKFImageChannelBuffer16Bit.h  PKFImageChannelBuffer8Bit.cpp  PKFImageChannelBufferFactory.cpp  PKFImageChannelBufferFloat.cpp  PKFImageChannelDescriptor.cpp  PKFImageChannelDescriptor.h  PKFImageMediaTypeDescriptor.cpp  PKFImageMediaTypeDescriptor.h  (+13 more)
src/filters/: CMakeLists.txt  PKFBmpReaderFilter.cpp  PKFBmpReaderFilter.h  PKFFileSinkFilter.cpp  PKFFileSinkFilter.h  PKFFileSourceFilter.cpp  PKFFiltersFactory.cpp  PKFJpegReaderFilter.cpp  PKFJpegWriterFilter.cpp  PKFJpegWriterFilter.h
src/music/: CMakeLists.txt  PKChord.cpp  PKChordDiagram.cpp  PKChordDiagram.h  PKChordFinder.cpp  PKChordFinder.h  PKGuitarNeck.cpp  PKGuitarNeck.h  PKNeck.cpp  PKNeck.h  PKNote.cpp  PKString.cpp  PKTuning.cpp
src/musicUI/: CMakeLists.txt  PKChordDiagramUI.cpp  PKChordDiagramVectorUI.cpp  PKChordDiagramVectorUI.h  PKChordLibraryDialog.cpp  PKMusicUIFactory.cpp  PKMusicUIFactory.h
src/pki18nlst/: CMakeLists.txt  main.cpp
src/pki18nstrip/: CMakeLists.txt  main.cpp
src/tools/: CMakeLists.txt  PKBase64.cpp  PKBrowserTool.cpp  PKByteReader.cpp  PKClipboard.cpp  PKClipboard.h  PKCpu.cpp  PKCrc.cpp  PKCritSec.cpp  PKCursorTools.cpp  PKDatabase.cpp  PKDownload.cpp  PKDownloader.cpp  PKDownloader.h  PKFile.cpp  PKLogger.cpp  PKMemBuffer.cpp  PKMemBuffer.h  PKMutex.cpp  PKMutex.h  PKOS.cpp  PKPath.cpp  PKPath.h  PKPersistTool.cpp  PKPersistTool.h  PKSafeEvents.cpp  PKScratchBuffer.cpp  PKScreenTool.cpp  PKScreenTool.h  PKSettings.cpp  PKSettings.h  PKStr.cpp  PKStr.h  PKThread.cpp  PKThread.h  PKTime.cpp  PKTimer.cpp  PKTimer.h  PKUndoManager.cpp  PKUndoableCommand.cpp  (+4 more)
src/ui/: CMakeLists.txt  PKAlertDialog.cpp  PKAnimationControl.cpp  PKAnimationControl.h  PKApp.cpp  PKApp.h  PKArrowTabControl.cpp  PKArrowTabControl.h  PKBitmapBorderVectorPanel.cpp  PKBitmapBorderVectorPanel.h  PKBitmapButton.cpp  PKBitmapButton.h  PKBitmapLabel.cpp  PKBitmapOps.cpp  PKBitmapOpsFunctions.h  PKBitmapOpsPPC.cpp  PKBitmapOpsPPC.h  PKBitmapOpsX86.nasm  PKBitmapProgressBar.cpp  PKBitmapProgressBar.h  PKBitmapToggleButton.cpp  PKBitmapToggleButton.h  PKBlitter.cpp  PKButton.cpp  PKButton.h  PKCarbonEvent.cpp  PKCarbonEvent.h  PKCheckBox.cpp  PKCheckBox.h  PKChooseFolderDialog.cpp  PKChooseFolderDialog.h  PKComboBox.cpp  PKComboBox.h  PKControl.cpp  PKCustomContainer.cpp  PKCustomControl.cpp  PKCustomControl.h  PKDialog.cpp  PKDialog.h  PKDoubleBufferedControl.cpp  (+90 more)
src/uiBuilder/: CMakeLists.txt  PKPropertiesWindow.cpp  PKPropertiesWindow.h  main.cpp  resource.h  uiBuilder.rc
src/vector/: CMakeLists.txt  PKGIFLoader.cpp  PKImage.cpp  PKImageLoader.cpp  PKJPGLoader.cpp  PKJPGLoader.h  PKPNGLoader.cpp  PKPNGLoader.h  PKVectorEngine.cpp  PKVectorEngine.h
