
# Add our directories
add_subdirectory (core) 
add_subdirectory (tools) 
add_subdirectory (vector) 
add_subdirectory (ui)
add_subdirectory (dialogs)
add_subdirectory (filterGraph)
add_subdirectory (filters)
add_subdirectory (music)
add_subdirectory (musicUI)
add_subdirectory (pki18nlst)
add_subdirectory (pki18nstrip)
add_subdirectory (uiBuilder)

 