
# Add include directories
include_directories("${PROJECT_SOURCE_DIR}/src/core" 
					"${PROJECT_SOURCE_DIR}/src/tools"
					"${PROJECT_SOURCE_DIR}/src/vector")

# Add filterGraph library
add_library(filterGraph

IPKFConnector.cpp
IPKFConnector.h
IPKFDataSinkFilter.cpp
IPKFDataSinkFilter.h
IPKFFilter.cpp
IPKFFilter.h
IPKFFilterFactory.cpp
IPKFFilterFactory.h
IPKFImageChannelBuffer.cpp
IPKFImageChannelBuffer.h
IPKFImageTransformFilter.cpp
IPKFImageTransformFilter.h
IPKFMediaTypeDescriptor.cpp
IPKFMediaTypeDescriptor.h
IPKFSample.cpp
IPKFSample.h
IPKFSampleRequest.cpp
IPKFSampleRequest.h
PKFCustomMediaTypeDescriptor.cpp
PKFCustomMediaTypeDescriptor.h
PKFCustomSample.cpp
PKFCustomSample.h
PKFCustomSampleRequest.cpp
PKFCustomSampleRequest.h
PKFDataBuffer.cpp
PKFDataBuffer.h
PKFDataMediaTypeDescriptor.cpp
PKFDataMediaTypeDescriptor.h
PKFDataSample.cpp
PKFDataSample.h
PKFDataSampleRequest.cpp
PKFDataSampleRequest.h
PKFFilterGraph.cpp
PKFFilterGraph.h
PKFFilterProperties.cpp
PKFFilterProperties.h
PKFImage.cpp
PKFImage.h
PKFImageChannel.cpp
PKFImageChannel.h
PKFImageChannelBuffer16Bit.cpp
PKFImageChannelBuffer16Bit.h
PKFImageChannelBuffer8Bit.cpp
PKFImageChannelBuffer8Bit.h
PKFImageChannelBufferFactory.cpp
PKFImageChannelBufferFactory.h
PKFImageChannelBufferFloat.cpp
PKFImageChannelBufferFloat.h
PKFImageChannelDescriptor.cpp
PKFImageChannelDescriptor.h
PKFImageMediaTypeDescriptor.cpp
PKFImageMediaTypeDescriptor.h
PKFImageSample.cpp
PKFImageSample.h
PKFImageSampleRequest.cpp
PKFImageSampleRequest.h
PKFInputConnector.cpp
PKFInputConnector.h
PKFMediaTypeDescriptorUtility.cpp
PKFMediaTypeDescriptorUtility.h
PKFMetaFilter.cpp
PKFMetaFilter.h
PKFNullSinkFilter.cpp
PKFNullSinkFilter.h
PKFNullSourceFilter.cpp
PKFNullSourceFilter.h
PKFOutputConnector.cpp
PKFOutputConnector.h
PKFSampleAutoLock.cpp
PKFSampleAutoLock.h
PKFSampleManager.cpp
PKFSampleManager.h
PKFTypes.h

)
